--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,27 @@
         android:theme="@style/Theme.DoAnAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivityMenu"
+            android:exported="false"
+            android:label="@string/title_activity_main_menu"
+            android:theme="@style/Theme.DoAnAndroid" />
+        <activity
+            android:name=".menu"
+            android:exported="false"
+            android:label="@string/title_activity_menu"
+            android:theme="@style/Theme.DoAnAndroid" />
+        <activity
+            android:name=".Menu"
+            android:exported="false"
+            android:label="@string/title_activity_menu"
+            android:theme="@style/Theme.DoAnAndroid" />
+        <activity
+            android:name=".VPAdapter"
+            android:exported="false" />
+        <activity
+            android:name=".TheLoai"
+            android:exported="false" />
+        <activity
             android:name=".TacGia"
             android:exported="false" />
         <activity
