--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,24 @@
         android:theme="@style/Theme.DoAnAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".UpdateTheLoai"
+            android:exported="false" />
+        <activity
+            android:name=".InsertTheLoai"
+            android:exported="false" />
+        <activity
+            android:name=".Information"
+            android:exported="false" />
+        <activity
+            android:name=".InsertBook"
+            android:exported="false" />
+        <activity
+            android:name=".UpdateBook"
+            android:exported="false" />
+        <activity
+            android:name=".ThongKe"
+            android:exported="false" />
+        <activity
             android:name=".MainActivityMenu"
             android:exported="false"
             android:label="@string/title_activity_main_menu"
@@ -34,13 +52,13 @@
             android:name=".TheLoai"
             android:exported="false" />
         <activity
-            android:name=".TacGia"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".TacGiaa"
             android:exported="false" />
         <activity
             android:name=".Login"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
