--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.DoAnAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".InformationTacGia"
+            android:exported="false" />
+        <activity
+            android:name=".UpdateTacGia"
+            android:exported="false" />
+        <activity
             android:name=".AddTacgia"
             android:exported="false" />
         <activity
@@ -32,22 +38,21 @@
             android:exported="false" />
         <activity
             android:name=".ThongKe"
-            android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".MainActivityMenu"-->
-<!--            android:exported="false"-->
-<!--            android:label="@string/title_activity_main_menu"-->
-<!--            android:theme="@style/Theme.DoAnAndroid" />-->
-<!--        <activity-->
-<!--            android:name=".menu"-->
-<!--            android:exported="false"-->
-<!--            android:label="@string/title_activity_menu"-->
-<!--            android:theme="@style/Theme.DoAnAndroid" />-->
-<!--        <activity-->
-<!--            android:name=".Menu"-->
-<!--            android:exported="false"-->
-<!--            android:label="@string/title_activity_menu"-->
-<!--            android:theme="@style/Theme.DoAnAndroid" />-->
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".MainActivityMenu" -->
+        <!-- android:exported="false" -->
+        <!-- android:label="@string/title_activity_main_menu" -->
+        <!-- android:theme="@style/Theme.DoAnAndroid" /> -->
+        <!-- <activity -->
+        <!-- android:name=".menu" -->
+        <!-- android:exported="false" -->
+        <!-- android:label="@string/title_activity_menu" -->
+        <!-- android:theme="@style/Theme.DoAnAndroid" /> -->
+        <!-- <activity -->
+        <!-- android:name=".Menu" -->
+        <!-- android:exported="false" -->
+        <!-- android:label="@string/title_activity_menu" -->
+        <!-- android:theme="@style/Theme.DoAnAndroid" /> -->
         <activity
             android:name=".VPAdapter"
             android:exported="false" />
@@ -58,10 +63,10 @@
             android:name=".TacGiaa"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Login"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
